# disruptor-cpp

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  cppcheck-report.xml
.github/workflows/: benchmark.yml  build.yml  ci.yml  code-quality.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp
benchmarks/jmh/: BlockingQueueBenchmark.cpp  EmptyOverhead.cpp  MultiProducerSingleConsumer.cpp  SingleProducerSingleConsumer.cpp  TBusSingleProducerSingleConsumer.cpp  jmh_config.h  jmh_util.h
benchmarks/perftest/sequenced/: OneToOneSequencedThroughputTest.cpp
benchmarks/perftest/support/: PerfTestContext.h  PerfTestUtil.h  ValueAdditionEventHandler.h  ValueEvent.h
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  BUILD_GUIDE.md  CACHE_LINE_PADDING.md  PREP.md  PROJECT_STATUS.md  README.md  SEQUENCE_DESIGN.md
examples/: CMakeLists.txt
examples/disruptor_examples/: DynamicallyAddHandler.cpp  EarlyReleaseHandler.cpp  HandleExceptionOnTranslate.cpp  KeyedBatching.cpp  MultiProducerWithTranslator.cpp  Pipeliner.cpp  PullWithBatchedPoller.cpp  PullWithPoller.cpp  SequentialThreeConsumers.cpp  ShutdownOnError.cpp  ThreeToOneDisruptor.cpp  WaitForProcessing.cpp  WaitForShutdown.cpp
include/: disruptor.h
include/disruptor/: AbstractSequencer.h  AggregateEventHandler.h  AlertException.h  BatchEventProcessor.h  BatchEventProcessorBuilder.h  BatchRewindStrategy.h  BlockingWaitStrategy.h  BusySpinWaitStrategy.h  Cursored.h  DataProvider.h  Error.h  EventFactory.h  EventHandler.h  EventHandlerBase.h  EventHandlerIdentity.h  EventPoller.h  EventProcessor.h  EventSequencer.h  EventSink.h  EventTranslator.h  EventTranslatorOneArg.h  EventTranslatorThreeArg.h  EventTranslatorTwoArg.h  EventTranslatorVararg.h  EventuallyGiveUpBatchRewindStrategy.h  ExceptionHandler.h  ExceptionHandlers.h  FatalExceptionHandler.h  FixedSequenceGroup.h  IgnoreExceptionHandler.h  InsufficientCapacityException.h  LiteBlockingWaitStrategy.h  LiteTimeoutBlockingWaitStrategy.h  MultiProducerSequencer.h  NanosecondPauseBatchRewindStrategy.h  NoOpEventProcessor.h  PhasedBackoffWaitStrategy.h  ProcessingSequenceBarrier.h  RewindAction.h  RewindHandler.h  (+16 more)
include/disruptor/dsl/: ConsumerInfo.h  (+9 more)
scripts/: run_clang_tidy.sh
tests/: CMakeLists.txt
tests/disruptor/: BatchEventProcessorTest.cpp  BatchingTest.cpp  BusySpinWaitStrategyTest.cpp  DisruptorStressTest.cpp  EventPollerTest.cpp  EventPublisherTest.cpp  EventTranslatorTest.cpp  FixedSequenceGroupTest.cpp  LifecycleAwareTest.cpp  LiteTimeoutBlockingWaitStrategyTest.cpp  MaxBatchSizeEventProcessorTest.cpp  PhasedBackoffWaitStrategyTest.cpp  RewindBatchEventProcessorTest.cpp  RingBufferTest.cpp  RingBufferWithAssertingStubTest.cpp  SequenceBarrierTest.cpp  SequenceGroupTest.cpp  SequenceReportingCallbackTest.cpp  SequencerTest.cpp  ShutdownOnFatalExceptionTest.cpp  SleepingWaitStrategyTest.cpp  TimeoutBlockingWaitStrategyTest.cpp  YieldingWaitStrategyTest.cpp
tests/disruptor/dsl/: ConsumerRepositoryTest.cpp  DisruptorTest.cpp
tests/disruptor/dsl/stubs/: DelayedEventHandler.h  EventHandlerStub.h  EvilEqualsEventHandler.h  ExceptionThrowingEventHandler.h  SleepingEventHandler.h  StubExceptionHandler.h  StubPublisher.h
tests/disruptor/support/: DummyEventHandler.h  DummyEventProcessor.h  DummySequenceBarrier.h  DummyWaitStrategy.h  LongEvent.h  SequenceUpdater.h  StubEvent.h  TestEvent.h  WaitStrategyTestUtil.h
tests/disruptor/test_support/: CountDownLatch.h
tests/disruptor/util/: UtilTest.cpp
(+16 files in other folders)
